--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,5 +86,12 @@ flutter:
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
+  fonts:
+    - family: okraBold
+      fonts:
+        - asset: assets/font/okra_bold.ttf
+    - family: okra
+      fonts:
+        - asset: assets/font/okra_extralight.ttf
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
